updating crovery list code

--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>My Very Organized Grocery List</h1>
+      <h1>Very Organized Grocery List</h1>
     </header>
 
     <h2>PANTRY ITEMS</h2>
